# postgresql-audit

./: CONTRIBUTING.md  Cleanup.sh  Instructions.txt  Makefile  Makefile.am  Makefile.pg.in  README.md  THIRDPARTY.txt  audit_event.h  audit_handler.cc  audit_handler.h  bootstrap.sh  compiling.txt  configure.ac  dummy.c  isecg_audit--1.0.sql  isecg_audit.cc  isecg_audit.conf  isecg_audit.control  sql_print.h
include/: audit_event.h  audit_handler.h  pgsql_inc.h  sql_print.h
src/: Makefile.pg.in  audit--1.0.sql  audit.cc  audit.conf  audit.control  audit_handler.cc
